add user functionality

--- a/client/modules/auth/views/forgot-password.html
+++ b/client/modules/auth/views/forgot-password.html
@@ -1,14 +1,18 @@
 <div class="row login-container" align="center">
     <div class="col">
-        <form class="login-form">
+        <form class="login-form" name="forgotPasswordForm" novalidate>
           <div class="form-group">
               
-            <label for="exampleInputEmail1">Please input Email address to reset password</label>
-            <input type="email" ng-model="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            <label>Please input Email address to reset password</label>
+            <input type="email" ng-model="email" class="form-control" name="email" placeholder="Email" required>
+            <span ng-show="forgotPasswordForm.email.$invalid && forgotPasswordForm.email.$dirty" class="error-color">Please input valid email</span>
           </div>
            
           <div align="center">
               <button type="submit" class="btn btn-default btn-login" ng-click="reset_password()">Reset Password</button>
+          </div>
+          <div align="center">
+              <a href="/#/login">Login</a> or <a href="/#/sign-up">Sign Up</a>
           </div>
         </form>
     </div>
