--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -37,3 +37,6 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+.error-color {
+    color:red;
+}
