--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -60,3 +60,45 @@ th,tr {
 .modal {
     display: block;
 }
+.go-to-input{
+    margin:5px;
+    width:50px;
+    text-align: right;
+}
+
+.fixed { table-layout:fixed; }
+.fixed td { overflow: hidden; }
+
+.content-wrapper {
+    min-height: 88vh!important;
+}
+
+.title-column {
+    width:20%;
+}
+.title-column-container {
+    position: absolute;
+    background-color: red;
+    width: 100%;
+}
+.col-10 {
+    width: 10%!important;
+}
+.col-15 {
+    width: 15%!important;
+}
+.col-20 {
+    width: 20%!important;
+}
+.col-25 {
+    width: 100vw!important;
+}
+.col-30 {
+    width: 30%!important;
+}
+.col-35 {
+    width: 35%!important;
+}
+.col-40 {
+    width: 40%!important;
+}
