fix bug:add validation when username is empty

--- a/client/modules/dashboard/views/dashboard.html
+++ b/client/modules/dashboard/views/dashboard.html
@@ -133,7 +133,7 @@
                         </div>
                         <div class="form-group">
                             <label>Username</label>
-                            <input type="text" name="username" ng-model="selected_user.username" class="form-control" placeholder="Username" required
+                            <input type="text" name="username" ng-model="selected_user.username" class="form-control" placeholder="Username"
                             ng-disabled="isUpdateUser">
                             <span ng-show="addUpdateForm.username.$invalid && addUpdateForm.username.$dirty" class="error-color">Please input username</span>
                         </div>
