--- a/client/modules/auth/views/confirmation.html
+++ b/client/modules/auth/views/confirmation.html
@@ -1,1 +1,1 @@
-<h4>Your have successfully activated your account, please sign in using mobile application</h4>
+<h4 class="member-confirmation">Your have successfully activated your account, please sign in using mobile application</h4>
