--- a/client/modules/auth/views/member-confirm-error.html
+++ b/client/modules/auth/views/member-confirm-error.html
@@ -1,1 +1,1 @@
-<h4>Your activation link is expired, please re sign-up</h4>
+<h4 class="member-confirmation">Your activation link is expired, please re sign-up</h4>
