fix bug in user & add upload picture function

--- a/client/modules/auth/views/login.html
+++ b/client/modules/auth/views/login.html
@@ -14,7 +14,7 @@
           </div>
           <div align="center">
               <button type="submit" class="btn btn-default btn-login" ng-click="login()">Login</button>
-              <a href="" ng-click="forgot_password()">Forgot password?</a> or <a href="" ng-click="sign_up()">Sign Up</a>
+              <a href="" ng-click="forgotPassword()">Forgot password?</a>
           </div>
         </form>
     </div>
