--- a/client/modules/auth/views/forgot-password.html
+++ b/client/modules/auth/views/forgot-password.html
@@ -9,10 +9,10 @@
           </div>
            
           <div align="center">
-              <button type="submit" class="btn btn-default btn-login" ng-click="reset_password()">Reset Password</button>
+              <button type="submit" class="btn btn-default btn-login" ng-click="resetPassword()">Reset Password</button>
           </div>
           <div align="center">
-              <a href="/#/login">Login</a> or <a href="/#/sign-up">Sign Up</a>
+              <a href="/#/login">Login</a>
           </div>
         </form>
     </div>
