--- a/client/modules/dashboard/views/dashboard.html
+++ b/client/modules/dashboard/views/dashboard.html
@@ -68,7 +68,7 @@
                             <td class="">{{user.email}}</td>
                             <td class="">{{user.firstName}}</td>
                             <td class="">{{user.lastName}}</td>
-                            <td class="">{{user.roleName}}</td>
+                            <td class="">{{user.roleName.toString()}}</td>
                             <td class=""><img ng-src="{{user.profilePicture}}" height="42" width="42"></img>
                             </td>
                             <td class="">
