--- a/client/modules/auth/views/forgot-password.html
+++ b/client/modules/auth/views/forgot-password.html
@@ -1,19 +1,36 @@
+
 <div class="row login-container" align="center">
     <div class="col">
-        <form class="login-form" name="forgotPasswordForm" novalidate>
-          <div class="form-group">
-              
+        <form novalidate>
             <label>Please input Email address to reset password</label>
-            <input type="email" ng-model="email" class="form-control" name="email" placeholder="Email" required>
-            <span ng-show="forgotPasswordForm.email.$invalid && forgotPasswordForm.email.$dirty" class="error-color">Please input valid email</span>
-          </div>
-           
-          <div align="center">
-              <button type="submit" class="btn btn-default btn-login" ng-click="resetPassword()">Reset Password</button>
-          </div>
-          <div align="center">
+            <formly-form model="vm.forgotPassword" fields="vm.forgotPasswordFields" form="vm.forgotPasswordForm">
+                <button type="submit" class="btn btn-default btn-login" ng-click="resetPassword()">Reset Password</button>
+                <div align="center">
               <a href="/#/login">Login</a>
           </div>
+            </formly-form>
+
         </form>
     </div>
 </div>
+
+
+<script type="text/ng-template" id="modal.html">
+    <div tabindex="-1" role="dialog">
+        <div class="modal-popup-dialog">
+            <div class="modal-content" align="center">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"></button>
+                    <h4 class="modal-title" align="center">Alert</h4>
+                </div>
+                <div class="modal-body">
+                    {{message}}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" ng-click="closeModal()">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</script>
