--- a/client/modules/auth/views/login.html
+++ b/client/modules/auth/views/login.html
@@ -1,21 +1,34 @@
 <div class="row login-container" align="center">
     <div class="col">
-        <form name="loginForm" class="login-form" novalidate>
-            
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" ng-model="user.email" name="email" class="form-control" placeholder="Email" required>
-            <span ng-show="loginForm.email.$invalid && loginForm.email.$dirty" class="error-color">Please input valid email</span>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" ng-model="user.password" class="form-control"  placeholder="Password" name="password" required>
-            <span ng-show="loginForm.password.$invalid && loginForm.password.$dirty" class="error-color">Please input password</span>
-          </div>
-          <div align="center">
-              <button type="submit" class="btn btn-default btn-login" ng-click="login()">Login</button>
-              <a href="" ng-click="forgotPassword()">Forgot password?</a>
-          </div>
+        <form novalidate>
+            <formly-form model="vm.user" fields="vm.userFields" form="vm.userForm">
+                <button type="submit" class="btn btn-default btn-login" ng-click="login()">Login</button>
+                <div align="center">
+                    <a href="" ng-click="forgotPassword()">Forgot password?</a>
+                </div>
+            </formly-form>
         </form>
     </div>
 </div>
+
+
+<script type="text/ng-template" id="modal.html">
+    <!-- Modal -->
+    <div tabindex="-1" role="dialog">
+        <div class="modal-popup-dialog">
+            <!-- Modal content-->
+            <div class="modal-content" align="center">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"></button>
+                    <h4 class="modal-title" align="center">Alert</h4>
+                </div>
+                <div class="modal-body">
+                    {{message}}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" ng-click="closeModal()">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
