refactor code:add angular formly

--- a/client/modules/upload-file/views/upload-file.html
+++ b/client/modules/upload-file/views/upload-file.html
@@ -14,8 +14,8 @@
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title">Upload location from file</h3>
-
+                    <h3 class="box-title">Upload location from file </h3> 
+                    <i class="fa fa-info-circle" ng-click="goToInstruction()"></i> 
                     <div class="form-inline" align="center">
                         <div class="form-group">
                             <input type="file" class="form-control" accept="*" placeholder="file" ng-model-instant onchange="angular.element(this).scope().uploadFile(this)"
