--- a/client/modules/auth/views/login.html
+++ b/client/modules/auth/views/login.html
@@ -1,7 +1,7 @@
 <div class="row login-container" align="center">
     <div class="col">
         <form novalidate>
-            <formly-form model="vm.user" fields="vm.userFields" form="vm.userForm">
+            <formly-form model="vm.login" fields="vm.loginFields" form="vm.loginForm">
                 <button type="submit" class="btn btn-default btn-login" ng-click="login()">Login</button>
                 <div align="center">
                     <a href="" ng-click="forgotPassword()">Forgot password?</a>
@@ -10,25 +10,3 @@
         </form>
     </div>
 </div>
-
-
-<script type="text/ng-template" id="modal.html">
-    <!-- Modal -->
-    <div tabindex="-1" role="dialog">
-        <div class="modal-popup-dialog">
-            <!-- Modal content-->
-            <div class="modal-content" align="center">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"></button>
-                    <h4 class="modal-title" align="center">Alert</h4>
-                </div>
-                <div class="modal-body">
-                    {{message}}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" ng-click="closeModal()">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</script>
